Add Button component and integrate it into the Home page; update dependencies

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,10 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      // "baseUrl": ["."],
+      "@/*": ["./*"],
+      // "@hooks/*": ["./app/hooks/*"],
+      // "ui/*": ["./app/ui/*"]  
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
